assets/css/main.css
/* ... */
				#footer .inner .copyright li:first-child {
					border-left: 0;
					margin-left: 0;
					padding-left: 0;
				}

				#footer .inner .copyright li a {
					color: inherit;
				}

	@media screen and (max-width: 1280px) {

		#footer {
			background-color: #2e3141;
			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
			background-size: auto,
 cover;
			background-position: center,
 center;
			margin-top: -6.5em;
			padding-top: 6.5em;
		}

	}

	@media screen and (max-width: 980px) {

		#footer {
			margin-top: -4.75em;
			padding-top: 4.75em;
		}

			#footer .inner {
				padding: 3em 3em 1em 3em ;
				display: block;
				width: 100%;
			}

				#footer .inner form {
					width: 100%;
					margin: 0 0 4em 0;
				}

				#footer .inner .contact {
					width: 100%;
					margin: 0 0 4em 0;
				}

				#footer .inner .copyright {
					margin: 4em 0 2em 0;
				}

	}

	@media screen and (max-width: 736px) {

		#footer {
			margin-top: -2.5em;
			padding-top: 2.5em;
		}

			#footer .inner {
				padding: 2em 2em 0.1em 2em ;
			}

				#footer .inner form {
					margin: 0 0 3em 0;
				}

				#footer .inner .contact {
					margin: 0 0 3em 0;
				}

	}

	@media screen and (max-width: 480px) {

		#footer .inner .copyright li {
			border-left: 0;
			display: block;
			margin: 1em 0 0 0;
			padding-left: 0;
		}

			#footer .inner .copyright li:first-child {
				margin-top: 0;
			}

	}

	@media screen and (max-width: 360px) {

		#footer .inner {
			padding: 2em 1.5em 0.1em 1.5em ;
		}

	}

.badge {
	height: 25px !important;
	margin: 0px 2px !important;
}

@media screen and (max-width: 780px) {

	.row>.col-4 {
		width: 50%;
	}

	.row>.col-4:last-of-type {
		width: 100%;	
	}

	.row>.col-4:last-of-type>h3 {
		max-width: 50%;
		text-align: center;
		margin: 0 auto;
		margin-bottom: 0.4em;
	}
}



.proj {
	margin-bottom: .5em !important;
	padding-bottom: .5em !important;
}

.projTitle {
	border-bottom: solid 2px rgba(255, 255, 255, 0.125);
}

.nameIcons {
	color: white;
	height: 40px;
}

.titleMain>h2, .titleMain>ul, .titleMain>p, .titleMain>img, .title>h2, .title>ul, .title>p, .title>img{
	text-align: center;
	min-width: 50%;
	max-width: 100%;
	/*white-space: nowrap;*/
}

.title {
	width: 100%;
	background-color: rgba(255, 255, 255, 0.0);
	border-radius: 20px 20px 20px 20px;
	display: block;
	padding: 0.8em;
}

@media only screen and (min-width: 768px) {
	.title, .titleMain>h2, .titleMain>p, .titleMain>ul {
		width: 60% !important;
	}
}

@media only screen and (min-width: 2050px) {
	.title, .titleMain>h2, .titleMain>p, .titleMain>ul {
		margin: 0 auto;
    	width: 55em !important;
	}
}

.list {
	display:-moz-inline-stack;
	display:inline-block;
	text-align: center;
}

.row>.col-4 {
	text-align: center;
}

.listTitle {
	text-align: center;
	/*white-space: nowrap;*/
}

.major {
	font-size: 1.6em;
	
}

html {
	scroll-behavior: smooth;
}

.payMate {
	padding: 9em 0 6.25em 0 !important;
	background-color: #2e3141 !important;
	background-image: linear-gradient(to top, rgba(167, 208, 228, 0.85), rgba(184, 232, 254, 0.85)), url("../../images/PayMateBackground.PNG")!important;
	background-size: auto, cover !important;
	background-position: top, top !important;
	margin-top: 3.5em;
}

.darkBtn>li>a {
	color:rgba(1, 48, 138, 0.95) !important;
	box-shadow: inset 0 0 0 2px rgba(1, 48, 138, 0.95) !important;
	
}

.logoSubText {
	filter: blur(0);
    opacity: 1;
	border-top: solid 2px rgba(1, 48, 138, 0.95);
	font-size: 0.9em;
	color:rgba(1, 48, 138, 0.95);
	font-weight: 550 !important;
}

.headerShade {
	background-color: rgba(255, 255, 255, 0.8);
}

.listInside {
	list-style: inside;
}

ul li:before {
	position: absolute;
	left: -13px;
}

.left {
	text-align: left;
}

.center {
	text-align: center;
}

.red {
	color: rgb(233, 58, 58);
	border-color: rgb(233, 58, 58) !important;
}

.blue {
	color: rgb(31, 171, 236);
	border-color: rgb(31, 171, 236) !important;
}

.yellow {
	color: rgb(247, 244, 68);
	border-color: rgb(247, 244, 68) !important;
}

.green {
	color: rgb(54, 240, 54);
	border-color: rgb(54, 240, 54) !important;
}

@media only screen and (max-width: 767px) {
	.payMate {
		padding: 4em 0 4em 0 !important;
	}
}

@media only screen and (max-width: 480px) {
	.image.left, .image.right {
		padding: 1em 0em 1em 0em;
		max-width: 100%;
		margin: 0 auto;
	}
}


.contain {
	overflow: hidden;
}

.close {
	padding-top: 2em;
}

.BtnBottom {
	width: 50% !important;
	margin: 4.4em auto;
}

.BtnBottom>li>a {
	width: 80%;
	color: rgb(31, 171, 236) !important;
	box-shadow: inset 0 0 0 2px rgb(31, 171, 236) !important;
}

.BtnBottom>li {
	text-align: center;
}

.tableList {
	display: table;
	margin: 0 auto;
	text-align: center !important;
}

.horizontal-list {
	list-style: none;
}

.horizontal-list li {
	display: inline-block;
	padding: 0.5em 1em;
	align-self: auto;
}

.headerSubtitle>li {
	padding: 0em 0em;
	text-align: left !important;
}

.headerSubtitle>li>p {
	margin: 0;
}

.horizontal-list>li>img {
	margin-bottom: -0.4em !important;
}

.iconBackground {
	background-color: white;
	border-radius: 50%;
	padding: 0.2em;
	border-width: 0px;
}

.subtitle {
	font-size: 1em;
	text-align: center;
	padding-top: 1.5em;
	max-width: 60%;
	min-width: auto;
	text-align: center;
	margin: 0 auto;
	margin-bottom: 0.4em;
}

